--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-basiclayout": "^1.0.2",
+    "react-native-bestloading": "^1.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-opacity-button": "^1.0.3",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-navigation": "^4.4.3",
