--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-opacity-button": "^1.0.3",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-second-countdown": "^1.0.2",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^1.4.0",
     "react-navigation-stack": "^1.10.3",
